// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@ast-decorators/core plugin-options compiles in another way if option has different state 1`] = `
"class Link extends HTMLAnchorElement {
  _bar = 'baz';
}"
`;

exports[`@ast-decorators/core plugin-options compiles in one way if option has one state 1`] = `
"class Link extends HTMLAnchorElement {
  #_bar = 'baz';
}"
`;

exports[`@ast-decorators/core plugin-options ignores decorator if its name fits an "exclude" regular expression 1`] = `
"import { $bar, $baz } from './other';
import { $fuzz } from './fuzz';

@$bar
@$baz
@$fuzz
class Foo {
  #_bar = 'baz';
}"
`;

exports[`@ast-decorators/core plugin-options ignores decorator if its name is specified in "exclude" string array 1`] = `
"import { bar } from './other';

@bar
class Foo {
  #_bar = 'baz';
}"
`;

exports[`@ast-decorators/core plugin-options ignores decorator if path it is imported from is specified in "paths" exclude option 1`] = `
"import { bar } from './path/to/decorator';
import { baz } from '../decorator.ignore';

@baz
@bar
class Foo {
  #_bar = 'baz';
}"
`;
